[tool.poetry]
name = "1nit"
version = "0.1.0"
description = "Website for 1nit project"
authors = ["Nico <contact@nicolaschartier.fr>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
mkdocs-material = "^9.5.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
